# juniper-data-client

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude.yml  codeql.yml  lockfile-update.yml  publish.yml  scheduled-tests.yml  security-scan.yml
conf/: conda_environment_ci.yaml  requirements_ci.txt
docs/: DEVELOPER_CHEATSHEET.md  DOCUMENTATION_OVERVIEW.md  QUICK_START.md  REFERENCE.md
juniper_data_client/: __init__.py  client.py  constants.py  contract.py  exceptions.py
juniper_data_client/testing/: __init__.py  fake_client.py  generators.py
notes/: AGENTS_MD_AUDIT_ANALYSIS_2026-04-02.md  AGENTS_MD_UPDATE_PLAN_2026-04-02.md  AGENTS_MD_UPDATE_ROADMAP_2026-04-02.md  CONDA_DEPENDENCY_FILE_HEADER.md  HARDCODED_VALUES_ANALYSIS.md  HARDCODED_VALUES_REFACTOR_PLAN.md  MONOREPO_ANALYSIS.md  PIP_DEPENDENCY_FILE_HEADER.md  POLYREPO_MIGRATION_PLAN.md  THREAD_HANDOFF_PROCEDURE.md  WORKTREE_CLEANUP_PROCEDURE.md  WORKTREE_CLEANUP_PROCEDURE_V2.md  WORKTREE_SETUP_PROCEDURE.md  juniper-data-client_OTHER_DEPENDENCIES.md
notes/history/: WORKTREE_CLEANUP_PROCEDURE_V1.md
notes/pull_requests/: PR_SECURITY_HARDENING_2026-03-03.md
notes/releases/: RELEASE_NOTES_v0.4.2.md
scripts/: check_doc_links.py
tests/: __init__.py  conftest.py  test_client.py  test_client_coverage_gaps.py  test_contract.py  test_create_dataset_tags_ttl.py  test_fake_client.py  test_fake_client_batch.py  test_generator_parity.py  test_malformed_json_response.py  test_npzfile_resource_lifecycle.py  test_on_request_hook.py  test_performance.py  test_retry_policy.py  test_versioning.py  test_x_request_id_propagation.py
util/: run_all_tests.bash  run_coverage.bash
util/ad-hoc/: README.md
