[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-data-client"
version = "0.4.1"
description = "HTTP client for the JuniperData dataset generation service"
readme = "README.md"
license = "MIT"
authors = [{ name = "Paul Calnon" }]
requires-python = ">=3.12"
keywords = ["juniper", "juniper-ml", "juniper-ai", "artificial-intelligence", "dataset", "machine-learning", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "responses>=0.23.0",
    # METRICS-MON R4.6: tests for X-Request-ID propagation need the
    # ContextVar source. Listed under [test] (not as a hard dep) so
    # standalone notebook users don't pay the install cost.
    "juniper-observability>=0.1.1",
]
observability = [
    # METRICS-MON R4.6: opt-in to outbound X-Request-ID propagation
    # via the shared ``juniper_observability.request_id_var`` ContextVar.
    # Consumers that already depend on ``juniper-observability`` (canopy,
    # cascor) get the propagation transparently and don't need this
    # extra; standalone users opt in via
    # ``pip install juniper-data-client[observability]``.
    "juniper-observability>=0.1.1",
]
dev = [
    "juniper-data-client[test]",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=7.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-data-client"
Repository = "https://github.com/pcalnon/juniper-data-client"
Documentation = "https://github.com/pcalnon/juniper-data-client#readme"
Issues = "https://github.com/pcalnon/juniper-data-client/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["juniper_data_client*"]

[tool.setuptools.package-data]
juniper_data_client = ["py.typed"]

[tool.black]
line-length = 512
target-version = ["py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
# line_length = 320
line_length = 512

known_first_party = ["juniper_data_client"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = false
strict = true

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "-q", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring live service",
    "performance: Performance benchmark tests",
]
timeout = 30

[tool.coverage.run]
source = ["juniper_data_client"]
source_pkgs = ["juniper_data_client"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/data/*",
    "*/logs/*",
    # "*/__main__.py",
    # "*/api/*",
]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "^\\s*pass\\s*$",
]
show_missing = true
precision = 2
